--- a/.github/workflows/cpp-ut.yaml
+++ b/.github/workflows/cpp-ut.yaml
@@ -12,6 +12,8 @@ jobs:
   build:
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
+    env:
+      working-directory: POC2/app/src/main
     strategy:
       fail-fast: false
       matrix:
@@ -42,6 +44,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Download Ninja and CMake
+      working-directory: POC2/app/src/main
       shell: cmake -P {0}
       run: |
         set(cmake_version $ENV{CMAKE_VERSION})
@@ -80,6 +83,7 @@ jobs:
           )
         endif()
     - name: Download ccache
+      working-directory: POC2/app/src/main
       id: ccache
       shell: cmake -P {0}
       run: |
@@ -87,6 +91,7 @@ jobs:
         file(DOWNLOAD "${ccache_url}" ./ccache.tar.xz SHOW_PROGRESS)
         execute_process(COMMAND ${CMAKE_COMMAND} -E tar xvf ./ccache.tar.xz)
     - name: Prepare ccache timestamp
+      working-directory: POC2/app/src/main
       id: ccache_cache_timestamp
       shell: cmake -P {0}
       run: |
@@ -100,6 +105,7 @@ jobs:
         restore-keys: |
           ${{ matrix.config.name }}-ccache-
     - name: Configure
+      working-directory: POC2/app/src/main
       shell: cmake -P {0}
       run: |
         set(ENV{CC} ${{ matrix.config.cc }})
@@ -136,6 +142,7 @@ jobs:
           message(FATAL_ERROR "Bad exit status")
         endif()
     - name: Build
+      working-directory: POC2/app/src/main
       shell: cmake -P {0}
       run: |
         set(ENV{NINJA_STATUS} "[%f/%t %o/sec] ")
@@ -172,6 +179,7 @@ jobs:
           message(FATAL_ERROR "Build failed")
         endif()
     - name: ccache statistics
+      working-directory: POC2/app/src/main
       shell: cmake -P {0}
       run: |
         file(TO_CMAKE_PATH "$ENV{GITHUB_WORKSPACE}" ccache_basedir)
@@ -179,6 +187,7 @@ jobs:
         set(ENV{CCACHE_DIR} "${ccache_basedir}/.ccache")
         execute_process(COMMAND ccache -s)
     - name: Run tests
+      working-directory: POC2/app/src/main
       shell: cmake -P {0}
       run: |
         include(ProcessorCount)
@@ -199,6 +208,7 @@ jobs:
           message(FATAL_ERROR "Running tests failed!")
         endif()
     - name: Install Strip
+      working-directory: POC2/app/src/main
       run: cmake --install build --prefix instdir --strip
 
 
@@ -231,6 +241,7 @@ jobs:
         prerelease: false
 
     - name: Store Release url
+      working-directory: POC2/app/src/main
       run: |
         echo "${{ steps.create_release.outputs.upload_url }}" > ./upload_url
     - uses: actions/upload-artifact@v2
