--- a/.github/workflows/cpp-ut.yaml
+++ b/.github/workflows/cpp-ut.yaml
@@ -24,3 +24,7 @@ jobs:
       - name: build CMake
         working-directory: ./POC2/app/src/main
         run: cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Debug && make
+      
+      - name: launch unit tests
+        working-directory: ./POC2/app/src/main/Doctest_tests
+        run: cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Debug && make && ./Doctest_tests_run
