--- a/.github/workflows/cpp-ut.yaml
+++ b/.github/workflows/cpp-ut.yaml
@@ -23,8 +23,8 @@ jobs:
       
       - name: build CMake
         working-directory: ./POC2/app/src/main
-        run: cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Debug && make && cat Makefile && ls ./Doctest_tests
+        run: cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Debug && make
       
-      # - name: launch unit tests
-      #   working-directory: ./POC2/app/src/main/Doctest_tests
-      #   run: cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Debug && make && ./Doctest_tests_run
+      - name: launch unit tests
+        working-directory: ./POC2/app/src/main/Doctest_tests
+        run: cat Makefile && ./Doctest_tests_run
