--- a/smarthears_mobile/pubspec.yaml
+++ b/smarthears_mobile/pubspec.yaml
@@ -15,12 +15,15 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   carousel_slider: ^4.1.1
   google_fonts: ^3.0.1
+  crypto: ^3.0.2
+  get: ^4.6.5
   url_launcher: ^6.1.2
   shared_preferences: ^2.0.15
   device_info: ^2.0.3
   firebase_dynamic_links: ^4.2.5
+  sign_in_with_apple: ^4.0.0
   get_it: ^7.2.0
-  google_sign_in: ^5.3.2
+  google_sign_in: ^5.3.1
   firebase_auth: ^3.3.19
   global_configuration: ^2.0.0-nullsafety.1
   firebase_core: ^1.17.1
