--- a/smarthears_app/pubspec.yaml
+++ b/smarthears_app/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   pull_to_refresh: ^2.0.0
   flutter_cache_manager: ^3.3.0
   get_it: ^7.2.0
+  modal_bottom_sheet: ^2.0.1
+  curved_navigation_bar: ^1.0.3
+  flutter_html: ^2.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
