--- a/smarthears_app/pubspec.yaml
+++ b/smarthears_app/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   flutter_bloc: ^8.0.1
   get: ^4.6.5
   cached_network_image: ^3.2.0
-  pull_to_refresh: ^2.0.0
+  # pull_to_refresh: ^2.0.0
   flutter_cache_manager: ^3.3.0
   get_it: ^7.2.0
   modal_bottom_sheet: ^2.0.1
