--- a/smarthears_app/pubspec.yaml
+++ b/smarthears_app/pubspec.yaml
@@ -15,10 +15,10 @@ dependencies:
   get: ^4.6.5
   cached_network_image: ^3.2.0
   google_fonts: ^3.0.1
-  pull_to_refresh: ^2.0.0
   flutter_cache_manager: ^3.3.0
   get_it: ^7.2.0
   modal_bottom_sheet: ^2.0.1
+  pull_to_refresh_flutter3: ^2.0.1
   curved_navigation_bar: ^1.0.3
   flutter_html: ^2.2.1
 dev_dependencies:
