--- a/microservice-app/users-api/Dockerfile
+++ b/microservice-app/users-api/Dockerfile
@@ -9,6 +9,7 @@ COPY .mvn/ ./.mvn
 RUN ./mvnw dependency:resolve
 
 COPY . .
+RUN chmod +x mvnw
 RUN ./mvnw install
 
 CMD ["java", "-jar", "./target/users-api-0.0.1-SNAPSHOT.jar"]
