--- a/smarthears_app/pubspec.yaml
+++ b/smarthears_app/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   pull_to_refresh_flutter3: ^2.0.1
   curved_navigation_bar: ^1.0.3
   flutter_html: ^2.2.1
+  flutter_blue_plus: ^1.1.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
